--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,6 +1,8 @@
 pipeline {
     agent any
-    
+    environment {
+        PATH = "$PATH:/Library/Frameworks/Python.framework/Versions/3.12/bin:/usr/local/bin:/usr/bin:/bin:/usr/sbin:/sbin:/usr/local/share/dotnet:~/.dotnet/tools:/Library/Frameworks/Mono.framework/Versions/Current/Commands:/Users/wejdene/Documents/flutter/bin"
+    }
     stages {
         stage('Checkout') {
             steps {
