--- a/jenkinsfile
+++ b/jenkinsfile
@@ -22,7 +22,7 @@ pipeline {
         stage('test') {
             steps {
                 dir('lib/'){
-                        sh 'flutter test'
+                        sh 'test'
                     }
             }
         }
