--- a/jenkinsfile
+++ b/jenkinsfile
@@ -17,23 +17,13 @@ pipeline {
         stage('Build and Test') {
             steps {
                 sh 'flutter pub get'
+            }
+        }
+        stage('test') {
+            steps {
                 sh 'flutter test'
             }
         }
 
-        stage('package') {
-                steps {
-                    sh 'flutter build apk --release'
-                }
-        }
-        
-        stage('archive') {
-            steps {
-
-                sh 'mv build/app/outputs/flutter-apk/app-release.apk apk-payetonkawa-$BUILD_NUMBER.apk'
-                archiveArtifacts artifacts: 'apk-payetonkawa-*.apk', followSymlinks: false
-
-            }
-         }
     }
 }
