--- a/jenkinsfile
+++ b/jenkinsfile
@@ -21,7 +21,9 @@ pipeline {
         }
         stage('test') {
             steps {
-                sh 'flutter test'
+                dir('lib/'){
+                    sh 'flutter test'
+               }
             }
         }
 
