--- a/jenkinsfile
+++ b/jenkinsfile
@@ -29,6 +29,14 @@ pipeline {
                     sh 'flutter build apk --release'
                 }
         }
+        stage('archive') {
+            steps {
+
+                sh 'mv build/app/outputs/flutter-apk/app-release.apk apk-payetonkawa-$BUILD_NUMBER.apk'
+                archiveArtifacts artifacts: 'apk-payetonkawa-*.apk', followSymlinks: false
+
+            }
+         }
 
 
     }
