--- a/jenkinsfile
+++ b/jenkinsfile
@@ -14,7 +14,7 @@ pipeline {
                 sh 'flutter clean'
             }
         }
-        stage('Build and Test') {
+        stage('Build') {
             steps {
                 sh 'flutter pub get'
             }
